<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_item_search"
        android:icon="@drawable/ic_search_white_48dp"
        android:showAsAction="always"
        android:title="@string/menu_search_title" />

    <item
        android:id="@+id/menu_item_new_gift"
        android:icon="@drawable/ic_add_white_48dp"
        android:showAsAction="always"
        android:title="@string/gift_frag_new_gift" />

    <item
        android:id="@+id/menu_item_home"
        android:icon="@drawable/ic_home_white_48dp"
        android:title="@string/menu_home_title" />

    <item
        android:id="@+id/menu_item_top_givers"
        android:icon="@drawable/ic_favorite_white_48dp"
        android:title="@string/menu_top_givers_title" />
    <item
        android:id="@+id/menu_item_refresh"
        android:title="@string/menu_refresh_title" />
    <item
        android:id="@+id/menu_item_sign_in"
        android:title="@string/sign_in_menu_title" />
    <item
        android:id="@+id/menu_item_sign_out"
        android:title="@string/sign_out_menu_title" />
    <item
        android:id="@+id/menu_item_disconnect"
        android:title="@string/disconnect_menu_title" />
    <item
        android:id="@+id/menu_item_settings"
        android:title="@string/settings_menu_title" />
</menu>
